Fix the image and text overlapping issue on the Home Page - Recent Activity Section

--- a/src/public/css/custom.css
+++ b/src/public/css/custom.css
@@ -560,7 +560,7 @@ td.recent_activity {vertical-align:middle; color:#777777; padding:.5em;}
 
 td.recent_activity_sm {vertical-align:middle; color:#777777; font-size:.9em; padding:0em;}
 
-td.avatar {vertical-align:top;}
+td.avatar {vertical-align:top; width:15%;}
 
 .search_empty {display: block; margin-left: auto; margin-right: auto; margin-top:5em;  }
 
